--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dayjs": "^1.11.3",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "tabler-icons-react": "^1.53.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
