--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^4.2.12",
     "@mantine/dates": "^4.2.12",
     "@mantine/dropzone": "^4.2.12",
+    "@mantine/form": "^4.2.12",
     "@mantine/hooks": "^4.2.12",
     "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.12",
@@ -21,7 +22,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "tabler-icons-react": "^1.53.0"
+    "tabler-icons-react": "^1.53.0",
+    "universal-cookie": "^4.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
