--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/modals": "^4.2.12",
     "@mantine/next": "^4.2.12",
     "@mantine/notifications": "^4.2.12",
+    "@tabler/icons": "^1.80.0",
     "dayjs": "^1.11.3",
     "next": "12.2.2",
     "react": "18.2.0",
