--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,8 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.border": "#63ae4a",
     "titleBar.inactiveBackground": "#63ae4a99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#63ae4a"
 }
