--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tabler/icons": "^1.80.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
