--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,7 @@
     "titleBar.inactiveForeground": "#15202b99",
     "commandCenter.border": "#15202b99"
   },
-  "peacock.color": "#63ae4a"
+  "peacock.color": "#63ae4a",
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true
 }
