--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/next": "^6.0.0",
     "@mantine/notifications": "^6.0.0",
     "@tabler/icons": "^1.80.0",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
     "moment": "^2.29.4",
