--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,17 @@
   "peacock.color": "#63ae4a",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
-  "cSpell.words": ["Akompi", "apifetcher", "NHIS", "Rockson", "tabler", "webp"]
+  "cSpell.words": [
+    "Akompi",
+    "apifetcher",
+    "Googlemessages",
+    "logrocket",
+    "midmes",
+    "necnra",
+    "NHIS",
+    "Ressetting",
+    "Rockson",
+    "tabler",
+    "webp"
+  ]
 }
