--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#63ae4a99",
     "titleBar.inactiveForeground": "#15202b99",
-    "commandCenter.border": "#15202b99"
+    "commandCenter.border": "#15202b99",
+    "tab.activeBorder": "#80c06b"
   },
   "peacock.color": "#63ae4a",
   "editor.formatOnSave": true,
